--- a/src/index.css
+++ b/src/index.css
@@ -209,9 +209,28 @@ select option {
   opacity: 0;
   transition: all .5s;
 }
+
 .download:hover::after{
   opacity: 100;
 }
+.scroll::-webkit-scrollbar {
+  width: 12px; 
+  height: 10px; 
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background-color: #858484;
+  border-radius: 10px; 
+}
+
+.scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #555; }
+
+.scroll::-webkit-scrollbar-track {
+  background-color: #222; 
+  border-radius: 10px;
+}
+
 @media screen and (min-width: 768px){
   .input{
     width: 30vw;
