--- a/src/index.css
+++ b/src/index.css
@@ -156,6 +156,23 @@ select option {
   background-color: #222; 
   border-radius: 10px;
 }
+.CodeMirror-hscrollbar::-webkit-scrollbar {
+  width: 12px; 
+  height: 10px; 
+}
+
+.CodeMirror-hscrollbar::-webkit-scrollbar-thumb {
+  background-color: #858484;
+  border-radius: 10px; 
+}
+
+.CodeMirror-hscrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #555; }
+
+.CodeMirror-hscrollbar::-webkit-scrollbar-track {
+  background-color: #222; 
+  border-radius: 10px;
+}
 .leftBtn:hover{
   filter: brightness(85%);
   cursor: pointer;
